--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -8,6 +8,7 @@
 - Added hash-mode 15200 = Blockchain, My Wallet, V2
 - Added hash-mode 15300 = DPAPI masterkey file v1 and v2
 - Added hash-mode 15400 = Chacha20
+- Added hash-mode 15500 = Argon2
 
 ##
 ## Features
